<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="album"
            type="com.miso_vinilo_grupo32.models.Album" />
        <variable
            name="genre_text"
            type="String" />
        <variable
            name="release_date"
            type="String" />
        <variable
            name="record_label"
            type="String" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:padding="3dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/back_button_container"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/album_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textDirection="locale"
                    android:textAlignment="gravity"
                    android:paddingTop="20dp"
                    android:paddingBottom="5dp"
                    android:text="@{album.name}"
                    android:textSize="28sp"
                    android:textStyle="bold"
                    tools:text="Sample text" />
                <LinearLayout
                    android:id="@+id/basic_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/default_margin"
                    android:orientation="vertical">
                    <ImageView
                        android:id="@+id/album_image"
                        android:layout_width="@dimen/image_size"
                        android:layout_height="@dimen/image_size"
                        android:padding="@dimen/default_margin"
                        android:background="@color/main_color"
                        android:layout_gravity="center_horizontal"
                        android:scaleType="fitXY"
                        android:contentDescription="@string/cover_image"
                        tools:src="@tools:sample/avatars" />

                    <TextView
                        android:id="@+id/album_genre"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textDirection="locale"
                        android:textAlignment="gravity"
                        android:paddingBottom="15dp"
                        android:text="@{genre_text}"
                        tools:text="Sample text" />

                    <TextView
                        android:id="@+id/album_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textDirection="locale"
                        android:textAlignment="gravity"
                        android:paddingBottom="@dimen/default_margin"
                        android:text="@{album.description}"
                        tools:text="Sample text" />

                    <TextView
                        android:id="@+id/album_recordLabel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textDirection="locale"
                        android:textAlignment="gravity"
                        tools:text="Sample text" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textDirection="locale"
                            android:textAlignment="gravity"
                            android:text="@string/release_date"
                            android:textStyle="bold"
                            tools:text="Sample text"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textDirection="locale"
                            android:textAlignment="gravity"
                            android:text="@{release_date}"
                            tools:text="Sample text" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingBottom="5dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/record_label"
                            android:textDirection="locale"
                            android:textAlignment="gravity"
                            android:textStyle="bold"
                            tools:text="Sample text" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textDirection="locale"
                            android:textAlignment="gravity"
                            android:text="@{record_label}"
                            tools:text="Sample text" />
                    </LinearLayout>
                </LinearLayout>
                <RelativeLayout
                    android:id="@+id/songs_display"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/default_margin"
                    android:layout_marginRight="@dimen/default_margin"
                    android:layout_marginBottom="@dimen/default_margin"
                    android:background="@color/teal_200"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textDirection="locale"
                        android:textAlignment="gravity"
                        android:layout_marginStart="@dimen/default_margin"
                        android:padding="@dimen/default_margin"
                        android:text="@string/songs_button"
                        android:textColor="@color/black"
                        android:layout_alignParentStart="true"
                        android:textStyle="bold"
                        android:textSize="25sp"
                        tools:text="Sample text"/>

                    <ImageView
                        android:id="@+id/arrow_up"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:contentDescription="@string/show_tracks_list"
                        android:layout_marginTop="@dimen/default_margin"
                        android:layout_marginEnd="@dimen/default_margin"
                        app:srcCompat="@android:drawable/arrow_up_float" />

                    <ImageView
                        android:id="@+id/arrow_down"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:contentDescription="@string/hide_tracks_list"
                        android:layout_marginTop="@dimen/default_margin"
                        android:layout_marginEnd="@dimen/default_margin"
                        android:visibility="gone"
                        app:srcCompat="@android:drawable/arrow_down_float" />
                </RelativeLayout>
                <View
                    android:id="@+id/divider5"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="@dimen/default_margin"
                    android:layout_marginRight="@dimen/default_margin"
                    android:background="?android:attr/listDivider" />
                <LinearLayout
                    android:id="@+id/songs_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone">
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
        <LinearLayout
            android:id="@+id/back_button_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:layout_editor_absoluteX="146dp"
            android:gravity="center">
            <Button
                android:id="@+id/back_button_album_detail"
                android:layout_width="118dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:theme="@style/Theme.MISOvinilogrupo32.BackButton"
                android:text="@string/back_button"
                android:textColor="@color/back_button_text"/>
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>