<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainView">

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/fragment_container_view"
            android:name="com.miso_vinilo_grupo32.ui.MainViewFragment"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/back_button_main_container"
            app:layout_constraintTop_toTopOf="parent"/>

        <LinearLayout
            android:id="@+id/back_button_main_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            android:gravity="center">

            <Button
                android:id="@+id/back_button_main"
                android:layout_width="118dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/back_button"
                android:textColor="@color/back_button_text"
                android:theme="@style/Theme.MISOvinilogrupo32.BackButton" />
        </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>